--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello world</h1>
-        <p>I'm hosted with GitHub Pages</p>
+        <main><h1>CatPhotoApp</h1>
+        <h2>Cat Photos</h2>
+        <!--TODO: Add link to cat photos-->
+        <p>Click here to view more cat photos.</p></main>
     </body>
 </html>
