--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <main><h1>CatPhotoApp</h1>
-        <h2>Cat Photos</h2>
-        <!--TODO: Add link to cat photos-->
-        <p>Click here to view more cat photos.</p></main>
+        <main><h1>DogPhotoApp</h1>
+        <h2>Dog Photos</h2>
+        <!--TODO: Add link to dog photos-->
+        <p>Click here to view more dog photos.</p></main>
     </body>
 </html>
